replaced constructor with class

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <button id="new-book-btn">New Book</button>
 
-    <form id="new-book-form" style="display: none;">
+    <form id="book-form" style="display: none;">
         <input type="text" id="title" placeholder="Title" required>
         <input type="text" id="author" placeholder="Author" required>
         <input type="number" id="pages" placeholder="Pages" required>
@@ -21,8 +20,8 @@
         <button type="submit">Add Book</button>
     </form>
 
+    <button id="new-book-btn">New Book</button>
     <div id="library-container"></div>
-
 
     <script src="script.js"></script>
 </body>
